small gui fixes

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CQ1SCHXPTT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CQ1SCHXPTT');
+    </script>
     <title>StockDiv</title>
 
     <meta charset="utf-8" />
